libs/extractor/src/snapshots/extractor__tests__rest_props.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr\"import {Flex} from '@devup-ui/core'\n        <Flex opacity={0.5} {...props} />\n        \",\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: None,
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "opacity",
                level: 0,
                identifier: "\"opacity\" in __devupSpread0 ? __devupSpread0.opacity : void 0",
                selector: None,
                style_order: None,
                overridable: Override {
                    variable: "--a",
                    fallback: ".5",
                },
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupSpread0) => <div {...(({ \"styleOrder\": __devupOrder, \"style-order\": __devupKebabOrder, ...__devupProps }) => __devupProps)({\n\t__proto__: null,\n\t...__devupSpread0\n})} className={`${__devupSpread0?.className || \"\"} b c`} style={{\n\t...{ \"--a\": \"opacity\" in __devupSpread0 ? __devupSpread0.opacity : void 0 },\n\t...__devupSpread0?.style\n}} />)({\n\t__proto__: null,\n\t...props\n});\n",
}
