libs/extractor/src/snapshots/extractor__tests__selector_keys_computed_from_constants.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\n\"import { css } from '@devup-ui/react';\\nconst card = css({ p: 1 });\\nconst HOVER = ':hover';\\nexport const a = css({ selectors: { [`.${card}${HOVER} &`]: { m: 1 } }, [`.${card} &`]: { m: 2 } });\",\nExtractOption\n{ import_main_css: false, ..ExtractOption::default() },).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "margin",
                value: "4px",
                level: 0,
                selector: Some(
                    Selector(
                        ".OLpadding-v4px:hover &",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "margin",
                value: "8px",
                level: 0,
                selector: Some(
                    Selector(
                        ".OLpadding-v4px &",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "4px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui-0.css\";\nconst card = \"OLpadding-v4px\";\nconst HOVER = \":hover\";\nexport const a = \"OHbybqy_8dtzyu6hcs OHdpx06mzt2mhwpc_9\";\n",
}
