libs/extractor/src/snapshots/extractor__tests__spreads_are_read_once.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(output)"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "margin",
                value: "8px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "12px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "4px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui-0.css\";\nimport { jsx as _jsx } from \"react/jsx-runtime\";\nexport const a = (register, rest, C) => ((__devupSpread2, __devupSpread3, __devupSpread1) => <div {...__devupSpread2} {...__devupSpread3} className={`FLtest_ptsx-OLpadding-v4px ${__devupSpread3?.className || \"\"} ${__devupSpread2?.className || \"\"}`} style={{\n\t...__devupSpread3?.style,\n\t...__devupSpread2?.style\n}}>\n    {__devupSpread1}\n  </div>)(((__devupSpreadValue) => ({ ...__devupSpreadValue }))(register(\"email\")), ((__devupSpreadValue) => ({ ...__devupSpreadValue }))(rest), ((DevupAs0, __devupSpread0) => <DevupAs0 {...__devupSpread0} className={__devupSpread0?.className || \"\"} style={__devupSpread0?.style} />)(C || \"div\", ((__devupSpreadValue) => ({ ...__devupSpreadValue }))(useFocusRing())));\nexport const b = async (load) => ((__devupSpread4) => <div {...__devupSpread4} className={`FLtest_ptsx-OLmargin-v8px ${__devupSpread4?.className || \"\"}`} style={__devupSpread4?.style} />)(((__devupSpreadValue) => ({ ...__devupSpreadValue }))(await load()));\nexport const c = (props) => ((__devupSpread5, __devupSpread6) => <div {...__devupSpread5} {...__devupSpread6} className={`FLtest_ptsx-OLpadding-v12px ${__devupSpread6?.className || \"\"} ${__devupSpread5?.className || \"\"}`} style={{\n\t...__devupSpread6?.style,\n\t...__devupSpread5?.style\n}} />)(((__devupSpreadValue) => ({ ...__devupSpreadValue }))({\n\tonClick: props.onClick,\n\ttitle: \"x\"\n}), ((__devupSpreadValue) => ({ ...__devupSpreadValue }))(props.rest));\nexport const d = (f) => ((__devupSpread7) => _jsx(\"div\", {\n\t...__devupSpread7,\n\tclassName: `FLtest_ptsx-OLbackground-vred ${__devupSpread7?.className || \"\"}`,\n\tstyle: __devupSpread7?.style\n}))(((__devupSpreadValue) => ({ ...__devupSpreadValue }))(f()));\nexport const e = async (f, g) => ((__devupSpread8, __devupSpread9) => _jsx(\"div\", {\n\t...__devupSpread8,\n\ttitle: __devupSpread9,\n\tclassName: __devupSpread8?.className || \"\",\n\tstyle: __devupSpread8?.style\n}))(((__devupSpreadValue) => ({ ...__devupSpreadValue }))(f()), await g());\nexport const g = async (f, g, h) => ((__devupSpread10, __devupSpread13, __devupSpread11, __devupSpread12) => <div id={__devupSpread10} {...__devupSpread13} title={__devupSpread11} onClick={__devupSpread12} className={__devupSpread13?.className || \"\"} style={__devupSpread13?.style} />)(h(), ((__devupSpreadValue) => ({ ...__devupSpreadValue }))(f()), await g(), h);\nexport const h = async (f, g) => ((__devupSpread15, __devupSpread14) => <div {...__devupSpread15} className={__devupSpread15?.className || \"\"} style={__devupSpread15?.style}>{__devupSpread14}</div>)(((__devupSpreadValue) => ({ ...__devupSpreadValue }))(f()), await g());\nexport const i = async (f, g) => ((__devupClass746, __devupSpread16) => _jsx(\"div\", {\n\t...__devupSpread16,\n\tclassName: __devupClass746 || \"\",\n\tstyle: __devupSpread16?.style\n}))(await g(), ((__devupSpreadValue) => ({ ...__devupSpreadValue }))(f()));\n",
}
